// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Milestone 7 export eval > 001-gallery-3x3-grid exports deterministic R3F after agent batch apply > 001-gallery-3x3-grid 1`] = `
"/* eslint-disable */
/* Auto-generated for React Three Fiber - paste inside <Canvas> */
<>
  {/* Studio fill - not from scene graph */}
  <ambientLight intensity={0.4} />
  <directionalLight castShadow position={[5, 8, 5]} intensity={1.1} />
    {/* gallery-root - Gallery */}
    <group name="Gallery" position={[0, 0, 0]} rotation={[0, 0, 0]} scale={[1, 1, 1]}>
      {/* gallery-hall - Hall */}
      <group name="Hall" position={[0, 0, 0]} rotation={[0, 0, 0]} scale={[1, 1, 1]}>
        {/* gallery-frame-0-0 - Frame 1-1 */}
        <group name="Frame 1-1" position={[-1.25, 0.5, -1.25]} rotation={[0, 0, 0]} scale={[0.35, 0.9, 0.08]}>
          <mesh castShadow receiveShadow>
            <boxGeometry args={[1, 1, 1]} />
            <meshStandardMaterial color="#9ca3af" />
          </mesh>
        </group>
        {/* gallery-frame-0-1 - Frame 1-2 */}
        <group name="Frame 1-2" position={[0, 0.5, -1.25]} rotation={[0, 0, 0]} scale={[0.35, 0.9, 0.08]}>
          <mesh castShadow receiveShadow>
            <boxGeometry args={[1, 1, 1]} />
            <meshStandardMaterial color="#9ca3af" />
          </mesh>
        </group>
        {/* gallery-frame-0-2 - Frame 1-3 */}
        <group name="Frame 1-3" position={[1.25, 0.5, -1.25]} rotation={[0, 0, 0]} scale={[0.35, 0.9, 0.08]}>
          <mesh castShadow receiveShadow>
            <boxGeometry args={[1, 1, 1]} />
            <meshStandardMaterial color="#9ca3af" />
          </mesh>
        </group>
        {/* gallery-frame-1-0 - Frame 2-1 */}
        <group name="Frame 2-1" position={[-1.25, 0.5, 0]} rotation={[0, 0, 0]} scale={[0.35, 0.9, 0.08]}>
          <mesh castShadow receiveShadow>
            <boxGeometry args={[1, 1, 1]} />
            <meshStandardMaterial color="#9ca3af" />
          </mesh>
        </group>
        {/* gallery-frame-1-1 - Frame 2-2 */}
        <group name="Frame 2-2" position={[0, 0.5, 0]} rotation={[0, 0, 0]} scale={[0.35, 0.9, 0.08]}>
          <mesh castShadow receiveShadow>
            <boxGeometry args={[1, 1, 1]} />
            <meshStandardMaterial color="#9ca3af" />
          </mesh>
        </group>
        {/* gallery-frame-1-2 - Frame 2-3 */}
        <group name="Frame 2-3" position={[1.25, 0.5, 0]} rotation={[0, 0, 0]} scale={[0.35, 0.9, 0.08]}>
          <mesh castShadow receiveShadow>
            <boxGeometry args={[1, 1, 1]} />
            <meshStandardMaterial color="#9ca3af" />
          </mesh>
        </group>
        {/* gallery-frame-2-0 - Frame 3-1 */}
        <group name="Frame 3-1" position={[-1.25, 0.5, 1.25]} rotation={[0, 0, 0]} scale={[0.35, 0.9, 0.08]}>
          <mesh castShadow receiveShadow>
            <boxGeometry args={[1, 1, 1]} />
            <meshStandardMaterial color="#9ca3af" />
          </mesh>
        </group>
        {/* gallery-frame-2-1 - Frame 3-2 */}
        <group name="Frame 3-2" position={[0, 0.5, 1.25]} rotation={[0, 0, 0]} scale={[0.35, 0.9, 0.08]}>
          <mesh castShadow receiveShadow>
            <boxGeometry args={[1, 1, 1]} />
            <meshStandardMaterial color="#9ca3af" />
          </mesh>
        </group>
        {/* gallery-frame-2-2 - Frame 3-3 */}
        <group name="Frame 3-3" position={[1.25, 0.5, 1.25]} rotation={[0, 0, 0]} scale={[0.35, 0.9, 0.08]}>
          <mesh castShadow receiveShadow>
            <boxGeometry args={[1, 1, 1]} />
            <meshStandardMaterial color="#9ca3af" />
          </mesh>
        </group>
      </group>
    </group>
</>
"
`;

exports[`Milestone 7 export eval > 001-gallery-3x3-grid exports stable JSON snapshot after agent batch apply > 001-gallery-3x3-grid 1`] = `
"{
  "data": {
    "nodes": {
      "gallery-frame-0-0": {
        "children": [],
        "id": "gallery-frame-0-0",
        "metadata": {},
        "name": "Frame 1-1",
        "transform": {
          "position": [
            -1.25,
            0.5,
            -1.25
          ],
          "rotation": [
            0,
            0,
            0
          ],
          "scale": [
            0.35,
            0.9,
            0.08
          ]
        },
        "type": "mesh",
        "visible": true
      },
      "gallery-frame-0-1": {
        "children": [],
        "id": "gallery-frame-0-1",
        "metadata": {},
        "name": "Frame 1-2",
        "transform": {
          "position": [
            0,
            0.5,
            -1.25
          ],
          "rotation": [
            0,
            0,
            0
          ],
          "scale": [
            0.35,
            0.9,
            0.08
          ]
        },
        "type": "mesh",
        "visible": true
      },
      "gallery-frame-0-2": {
        "children": [],
        "id": "gallery-frame-0-2",
        "metadata": {},
        "name": "Frame 1-3",
        "transform": {
          "position": [
            1.25,
            0.5,
            -1.25
          ],
          "rotation": [
            0,
            0,
            0
          ],
          "scale": [
            0.35,
            0.9,
            0.08
          ]
        },
        "type": "mesh",
        "visible": true
      },
      "gallery-frame-1-0": {
        "children": [],
        "id": "gallery-frame-1-0",
        "metadata": {},
        "name": "Frame 2-1",
        "transform": {
          "position": [
            -1.25,
            0.5,
            0
          ],
          "rotation": [
            0,
            0,
            0
          ],
          "scale": [
            0.35,
            0.9,
            0.08
          ]
        },
        "type": "mesh",
        "visible": true
      },
      "gallery-frame-1-1": {
        "children": [],
        "id": "gallery-frame-1-1",
        "metadata": {},
        "name": "Frame 2-2",
        "transform": {
          "position": [
            0,
            0.5,
            0
          ],
          "rotation": [
            0,
            0,
            0
          ],
          "scale": [
            0.35,
            0.9,
            0.08
          ]
        },
        "type": "mesh",
        "visible": true
      },
      "gallery-frame-1-2": {
        "children": [],
        "id": "gallery-frame-1-2",
        "metadata": {},
        "name": "Frame 2-3",
        "transform": {
          "position": [
            1.25,
            0.5,
            0
          ],
          "rotation": [
            0,
            0,
            0
          ],
          "scale": [
            0.35,
            0.9,
            0.08
          ]
        },
        "type": "mesh",
        "visible": true
      },
      "gallery-frame-2-0": {
        "children": [],
        "id": "gallery-frame-2-0",
        "metadata": {},
        "name": "Frame 3-1",
        "transform": {
          "position": [
            -1.25,
            0.5,
            1.25
          ],
          "rotation": [
            0,
            0,
            0
          ],
          "scale": [
            0.35,
            0.9,
            0.08
          ]
        },
        "type": "mesh",
        "visible": true
      },
      "gallery-frame-2-1": {
        "children": [],
        "id": "gallery-frame-2-1",
        "metadata": {},
        "name": "Frame 3-2",
        "transform": {
          "position": [
            0,
            0.5,
            1.25
          ],
          "rotation": [
            0,
            0,
            0
          ],
          "scale": [
            0.35,
            0.9,
            0.08
          ]
        },
        "type": "mesh",
        "visible": true
      },
      "gallery-frame-2-2": {
        "children": [],
        "id": "gallery-frame-2-2",
        "metadata": {},
        "name": "Frame 3-3",
        "transform": {
          "position": [
            1.25,
            0.5,
            1.25
          ],
          "rotation": [
            0,
            0,
            0
          ],
          "scale": [
            0.35,
            0.9,
            0.08
          ]
        },
        "type": "mesh",
        "visible": true
      },
      "gallery-hall": {
        "children": [
          "gallery-frame-0-0",
          "gallery-frame-0-1",
          "gallery-frame-0-2",
          "gallery-frame-1-0",
          "gallery-frame-1-1",
          "gallery-frame-1-2",
          "gallery-frame-2-0",
          "gallery-frame-2-1",
          "gallery-frame-2-2"
        ],
        "id": "gallery-hall",
        "metadata": {},
        "name": "Hall",
        "transform": {
          "position": [
            0,
            0,
            0
          ],
          "rotation": [
            0,
            0,
            0
          ],
          "scale": [
            1,
            1,
            1
          ]
        },
        "type": "group",
        "visible": true
      },
      "gallery-root": {
        "children": [
          "gallery-hall"
        ],
        "id": "gallery-root",
        "metadata": {},
        "name": "Gallery",
        "transform": {
          "position": [
            0,
            0,
            0
          ],
          "rotation": [
            0,
            0,
            0
          ],
          "scale": [
            1,
            1,
            1
          ]
        },
        "type": "root",
        "visible": true
      }
    },
    "rootId": "gallery-root",
    "selection": null
  },
  "format": "diorama-scene",
  "version": 2
}"
`;

exports[`Milestone 7 export eval > 002-showroom-duplicate-focus exports deterministic R3F after agent batch apply > 002-showroom-duplicate-focus 1`] = `
"/* eslint-disable */
/* Auto-generated for React Three Fiber - paste inside <Canvas> */
<>
  {/* Studio fill - not from scene graph */}
  <ambientLight intensity={0.4} />
  <directionalLight castShadow position={[5, 8, 5]} intensity={1.1} />
    {/* showroom-root - Messy Product Showroom */}
    <group name="Messy Product Showroom" position={[0, 0, 0]} rotation={[0, 0, 0]} scale={[1, 1, 1]}>
      {/* floor - Floor */}
      <group name="Floor" position={[0, -0.05, 0]} rotation={[0, 0, 0]} scale={[8, 0.1, 6]}>
        <mesh castShadow receiveShadow>
          <boxGeometry args={[1, 1, 1]} />
          <meshStandardMaterial color="#9ca3af" />
        </mesh>
      </group>
      {/* wall - North Wall */}
      <group name="North Wall" position={[0, 1.6, -3]} rotation={[0, 0, 0]} scale={[8, 3.2, 0.12]}>
        <mesh castShadow receiveShadow>
          <boxGeometry args={[1, 1, 1]} />
          <meshStandardMaterial color="#9ca3af" />
        </mesh>
      </group>
      {/* product_01 - Product 01 */}
      <group name="Product 01" position={[-1.8, 0.65, 0.4]} rotation={[0, 0.4, 0]} scale={[0.65, 0.9, 0.65]}>
        <mesh castShadow receiveShadow>
          <boxGeometry args={[1, 1, 1]} />
          <meshStandardMaterial color="#9ca3af" />
        </mesh>
      </group>
      {/* bench - Bench */}
      <group name="Bench" position={[-2.6, 0.32, 1.9]} rotation={[0, 0.18, 0]} scale={[1.5, 0.45, 0.55]}>
        <mesh castShadow receiveShadow>
          <boxGeometry args={[1, 1, 1]} />
          <meshStandardMaterial color="#9ca3af" />
        </mesh>
      </group>
      {/* display_table - Display Table */}
      <group name="Display Table" position={[-0.4, 0.28, 0.15]} rotation={[0, -0.12, 0]} scale={[1.8, 0.35, 0.9]}>
        <mesh castShadow receiveShadow>
          <boxGeometry args={[1, 1, 1]} />
          <meshStandardMaterial color="#9ca3af" />
        </mesh>
      </group>
      {/* product_03 - Product 03 */}
      <group name="Product 03" position={[0.35, 0.8, 1.45]} rotation={[0, 0.85, 0]} scale={[0.55, 1.1, 0.55]}>
        <mesh castShadow receiveShadow>
          <boxGeometry args={[1, 1, 1]} />
          <meshStandardMaterial color="#9ca3af" />
        </mesh>
      </group>
      {/* light_fill - Light Fill */}
      <group name="Light Fill" position={[3.1, 2.4, 2.5]} rotation={[0, -0.4, 0]} scale={[0.25, 0.25, 0.25]}>
        <ambientLight intensity={0.35} />
      </group>
      {/* chair - Chair */}
      <group name="Chair" position={[2.7, 0.45, 1.65]} rotation={[0, -0.55, 0]} scale={[0.75, 0.9, 0.75]}>
        <mesh castShadow receiveShadow>
          <boxGeometry args={[1, 1, 1]} />
          <meshStandardMaterial color="#9ca3af" />
        </mesh>
      </group>
      {/* display_plinth - Display Plinth */}
      <group name="Display Plinth" position={[1.3, 0.32, 1.15]} rotation={[0, 0.1, 0]} scale={[0.9, 0.65, 0.9]}>
        <mesh castShadow receiveShadow>
          <boxGeometry args={[1, 1, 1]} />
          <meshStandardMaterial color="#9ca3af" />
        </mesh>
      </group>
      {/* product_02 - Product 02 */}
      <group name="Product 02" position={[2.1, 0.55, -0.2]} rotation={[0, -0.25, 0]} scale={[0.8, 0.7, 0.8]}>
        <mesh castShadow receiveShadow>
          <boxGeometry args={[1, 1, 1]} />
          <meshStandardMaterial color="#9ca3af" />
        </mesh>
      </group>
      {/* light_key - Light Key */}
      <group name="Light Key" position={[-3.2, 3.4, 2.2]} rotation={[0, 0.5, 0]} scale={[0.25, 0.25, 0.25]}>
        <directionalLight intensity={1.2} castShadow />
      </group>
      {/* backdrop_panel - Backdrop Panel */}
      <group name="Backdrop Panel" position={[-2.4, 1.05, -2.65]} rotation={[0, 0.18, 0]} scale={[1.6, 2.1, 0.1]}>
        <mesh castShadow receiveShadow>
          <boxGeometry args={[1, 1, 1]} />
          <meshStandardMaterial color="#9ca3af" />
        </mesh>
      </group>
      {/* display_table-copy - Display Table (copy) */}
      <group name="Display Table (copy)" position={[3, 0.28, 0]} rotation={[0, -0.12, 0]} scale={[1.8, 0.35, 0.9]}>
        <mesh castShadow receiveShadow>
          <boxGeometry args={[1, 1, 1]} />
          <meshStandardMaterial color="#9ca3af" />
        </mesh>
      </group>
    </group>
</>
"
`;

exports[`Milestone 7 export eval > 002-showroom-duplicate-focus exports stable JSON snapshot after agent batch apply > 002-showroom-duplicate-focus 1`] = `
"{
  "data": {
    "nodes": {
      "backdrop_panel": {
        "children": [],
        "id": "backdrop_panel",
        "metadata": {},
        "name": "Backdrop Panel",
        "transform": {
          "position": [
            -2.4,
            1.05,
            -2.65
          ],
          "rotation": [
            0,
            0.18,
            0
          ],
          "scale": [
            1.6,
            2.1,
            0.1
          ]
        },
        "type": "mesh",
        "visible": true
      },
      "bench": {
        "children": [],
        "id": "bench",
        "metadata": {},
        "name": "Bench",
        "transform": {
          "position": [
            -2.6,
            0.32,
            1.9
          ],
          "rotation": [
            0,
            0.18,
            0
          ],
          "scale": [
            1.5,
            0.45,
            0.55
          ]
        },
        "type": "mesh",
        "visible": true
      },
      "chair": {
        "children": [],
        "id": "chair",
        "metadata": {},
        "name": "Chair",
        "transform": {
          "position": [
            2.7,
            0.45,
            1.65
          ],
          "rotation": [
            0,
            -0.55,
            0
          ],
          "scale": [
            0.75,
            0.9,
            0.75
          ]
        },
        "type": "mesh",
        "visible": true
      },
      "display_plinth": {
        "children": [],
        "id": "display_plinth",
        "metadata": {},
        "name": "Display Plinth",
        "transform": {
          "position": [
            1.3,
            0.32,
            1.15
          ],
          "rotation": [
            0,
            0.1,
            0
          ],
          "scale": [
            0.9,
            0.65,
            0.9
          ]
        },
        "type": "mesh",
        "visible": true
      },
      "display_table": {
        "children": [],
        "id": "display_table",
        "metadata": {},
        "name": "Display Table",
        "transform": {
          "position": [
            -0.4,
            0.28,
            0.15
          ],
          "rotation": [
            0,
            -0.12,
            0
          ],
          "scale": [
            1.8,
            0.35,
            0.9
          ]
        },
        "type": "mesh",
        "visible": true
      },
      "display_table-copy": {
        "children": [],
        "id": "display_table-copy",
        "metadata": {},
        "name": "Display Table (copy)",
        "transform": {
          "position": [
            3,
            0.28,
            0
          ],
          "rotation": [
            0,
            -0.12,
            0
          ],
          "scale": [
            1.8,
            0.35,
            0.9
          ]
        },
        "type": "mesh",
        "visible": true
      },
      "floor": {
        "children": [],
        "id": "floor",
        "metadata": {},
        "name": "Floor",
        "transform": {
          "position": [
            0,
            -0.05,
            0
          ],
          "rotation": [
            0,
            0,
            0
          ],
          "scale": [
            8,
            0.1,
            6
          ]
        },
        "type": "mesh",
        "visible": true
      },
      "light_fill": {
        "children": [],
        "id": "light_fill",
        "light": {
          "intensity": 0.35,
          "kind": "ambient"
        },
        "metadata": {},
        "name": "Light Fill",
        "transform": {
          "position": [
            3.1,
            2.4,
            2.5
          ],
          "rotation": [
            0,
            -0.4,
            0
          ],
          "scale": [
            0.25,
            0.25,
            0.25
          ]
        },
        "type": "light",
        "visible": true
      },
      "light_key": {
        "children": [],
        "id": "light_key",
        "light": {
          "castShadow": true,
          "intensity": 1.2,
          "kind": "directional"
        },
        "metadata": {},
        "name": "Light Key",
        "transform": {
          "position": [
            -3.2,
            3.4,
            2.2
          ],
          "rotation": [
            0,
            0.5,
            0
          ],
          "scale": [
            0.25,
            0.25,
            0.25
          ]
        },
        "type": "light",
        "visible": true
      },
      "product_01": {
        "children": [],
        "id": "product_01",
        "metadata": {},
        "name": "Product 01",
        "transform": {
          "position": [
            -1.8,
            0.65,
            0.4
          ],
          "rotation": [
            0,
            0.4,
            0
          ],
          "scale": [
            0.65,
            0.9,
            0.65
          ]
        },
        "type": "mesh",
        "visible": true
      },
      "product_02": {
        "children": [],
        "id": "product_02",
        "metadata": {},
        "name": "Product 02",
        "transform": {
          "position": [
            2.1,
            0.55,
            -0.2
          ],
          "rotation": [
            0,
            -0.25,
            0
          ],
          "scale": [
            0.8,
            0.7,
            0.8
          ]
        },
        "type": "mesh",
        "visible": true
      },
      "product_03": {
        "children": [],
        "id": "product_03",
        "metadata": {},
        "name": "Product 03",
        "transform": {
          "position": [
            0.35,
            0.8,
            1.45
          ],
          "rotation": [
            0,
            0.85,
            0
          ],
          "scale": [
            0.55,
            1.1,
            0.55
          ]
        },
        "type": "mesh",
        "visible": true
      },
      "showroom-root": {
        "children": [
          "floor",
          "wall",
          "product_01",
          "bench",
          "display_table",
          "product_03",
          "light_fill",
          "chair",
          "display_plinth",
          "product_02",
          "light_key",
          "backdrop_panel",
          "display_table-copy"
        ],
        "id": "showroom-root",
        "metadata": {},
        "name": "Messy Product Showroom",
        "transform": {
          "position": [
            0,
            0,
            0
          ],
          "rotation": [
            0,
            0,
            0
          ],
          "scale": [
            1,
            1,
            1
          ]
        },
        "type": "root",
        "visible": true
      },
      "wall": {
        "children": [],
        "id": "wall",
        "metadata": {},
        "name": "North Wall",
        "transform": {
          "position": [
            0,
            1.6,
            -3
          ],
          "rotation": [
            0,
            0,
            0
          ],
          "scale": [
            8,
            3.2,
            0.12
          ]
        },
        "type": "mesh",
        "visible": true
      }
    },
    "rootId": "showroom-root",
    "selection": "display_table-copy"
  },
  "format": "diorama-scene",
  "version": 2
}"
`;

exports[`Milestone 7 export eval > 003-living-transform-export exports deterministic R3F after agent batch apply > 003-living-transform-export 1`] = `
"/* eslint-disable */
/* Auto-generated for React Three Fiber - paste inside <Canvas> */
<>
  {/* Studio fill - not from scene graph */}
  <ambientLight intensity={0.4} />
  <directionalLight castShadow position={[5, 8, 5]} intensity={1.1} />
    {/* living-root - Living space */}
    <group name="Living space" position={[0, 0, 0]} rotation={[0, 0, 0]} scale={[1, 1, 1]}>
      {/* living-room - Room */}
      <group name="Room" position={[0, 0, 0]} rotation={[0, 0, 0]} scale={[1, 1, 1]}>
        {/* living-floor - Floor */}
        <group name="Floor" position={[0, 0.04, 0]} rotation={[0, 0, 0]} scale={[6, 0.08, 4.5]}>
          <mesh castShadow receiveShadow>
            <boxGeometry args={[1, 1, 1]} />
            <meshStandardMaterial color="#9ca3af" />
          </mesh>
        </group>
        {/* living-furniture-group - Furniture */}
        <group name="Furniture" position={[0, 0, 0]} rotation={[0, 0, 0]} scale={[1, 1, 1]}>
          {/* living-sofa - Sofa */}
          <group name="Sofa" position={[-1.2, 0.45, 0.5]} rotation={[0, 0.25, 0]} scale={[1.8, 0.55, 0.85]}>
            <mesh castShadow receiveShadow>
              <boxGeometry args={[1, 1, 1]} />
              <meshStandardMaterial color="#9ca3af" />
            </mesh>
          </group>
          {/* living-table - Coffee table */}
          <group name="Coffee table" position={[0.95, 0.32, 0.1]} rotation={[0, 0.2, 0]} scale={[1.1, 0.12, 0.65]}>
            <mesh castShadow receiveShadow>
              <boxGeometry args={[1, 1, 1]} />
              <meshStandardMaterial color="#9ca3af" />
            </mesh>
          </group>
          {/* living-lamp - Floor lamp */}
          <group name="Floor lamp" position={[1.9, 0.95, -0.6]} rotation={[0, 0, 0]} scale={[0.2, 1.9, 0.2]}>
            <mesh castShadow receiveShadow>
              <boxGeometry args={[1, 1, 1]} />
              <meshStandardMaterial color="#9ca3af" />
            </mesh>
          </group>
        </group>
      </group>
    </group>
</>
"
`;

exports[`Milestone 7 export eval > 003-living-transform-export exports stable JSON snapshot after agent batch apply > 003-living-transform-export 1`] = `
"{
  "data": {
    "nodes": {
      "living-floor": {
        "children": [],
        "id": "living-floor",
        "materialRef": {
          "kind": "token",
          "token": "mat.floor"
        },
        "metadata": {},
        "name": "Floor",
        "transform": {
          "position": [
            0,
            0.04,
            0
          ],
          "rotation": [
            0,
            0,
            0
          ],
          "scale": [
            6,
            0.08,
            4.5
          ]
        },
        "type": "mesh",
        "visible": true
      },
      "living-furniture-group": {
        "children": [
          "living-sofa",
          "living-table",
          "living-lamp"
        ],
        "id": "living-furniture-group",
        "metadata": {},
        "name": "Furniture",
        "transform": {
          "position": [
            0,
            0,
            0
          ],
          "rotation": [
            0,
            0,
            0
          ],
          "scale": [
            1,
            1,
            1
          ]
        },
        "type": "group",
        "visible": true
      },
      "living-lamp": {
        "children": [],
        "id": "living-lamp",
        "materialRef": {
          "kind": "token",
          "token": "mat.metal"
        },
        "metadata": {},
        "name": "Floor lamp",
        "transform": {
          "position": [
            1.9,
            0.95,
            -0.6
          ],
          "rotation": [
            0,
            0,
            0
          ],
          "scale": [
            0.2,
            1.9,
            0.2
          ]
        },
        "type": "mesh",
        "visible": true
      },
      "living-room": {
        "children": [
          "living-floor",
          "living-furniture-group"
        ],
        "id": "living-room",
        "metadata": {},
        "name": "Room",
        "transform": {
          "position": [
            0,
            0,
            0
          ],
          "rotation": [
            0,
            0,
            0
          ],
          "scale": [
            1,
            1,
            1
          ]
        },
        "type": "group",
        "visible": true
      },
      "living-root": {
        "children": [
          "living-room"
        ],
        "id": "living-root",
        "metadata": {},
        "name": "Living space",
        "transform": {
          "position": [
            0,
            0,
            0
          ],
          "rotation": [
            0,
            0,
            0
          ],
          "scale": [
            1,
            1,
            1
          ]
        },
        "type": "root",
        "visible": true
      },
      "living-sofa": {
        "children": [],
        "id": "living-sofa",
        "materialRef": {
          "kind": "token",
          "token": "mat.fabric"
        },
        "metadata": {},
        "name": "Sofa",
        "transform": {
          "position": [
            -1.2,
            0.45,
            0.5
          ],
          "rotation": [
            0,
            0.25,
            0
          ],
          "scale": [
            1.8,
            0.55,
            0.85
          ]
        },
        "type": "mesh",
        "visible": true
      },
      "living-table": {
        "children": [],
        "id": "living-table",
        "materialRef": {
          "kind": "token",
          "token": "mat.wood"
        },
        "metadata": {},
        "name": "Coffee table",
        "transform": {
          "position": [
            0.95,
            0.32,
            0.1
          ],
          "rotation": [
            0,
            0.2,
            0
          ],
          "scale": [
            1.1,
            0.12,
            0.65
          ]
        },
        "type": "mesh",
        "visible": true
      }
    },
    "rootId": "living-root",
    "selection": "living-table"
  },
  "format": "diorama-scene",
  "version": 2
}"
`;

exports[`Milestone 7 export eval > exports a structured R3F module for an interactive showroom agent flow > interactive showroom module 1`] = `
"/* eslint-disable */
/* Auto-generated by Diorama R3F bridge. Review TODOs before shipping. */
import { useState } from 'react';
import type { ReactNode } from 'react';
import type { ThreeElements } from '@react-three/fiber';

type SemanticNodeProps = Omit<ThreeElements['group'], 'children'> & {
  sourceId: string;
  semanticRole: string;
  renderMesh?: boolean;
  children?: ReactNode;
  onSelect?: () => void;
  onHoverStart?: () => void;
  onHoverEnd?: () => void;
};

function SemanticNode(props: SemanticNodeProps) {
  const { sourceId, semanticRole, renderMesh, children, onSelect, onHoverStart, onHoverEnd, ...groupProps } = props;
  return (
    <group
      {...groupProps}
      userData={{ sourceId, semanticRole }}
      onPointerOver={onHoverStart}
      onPointerOut={onHoverEnd}
      onClick={onSelect}
    >
      {renderMesh ? (
        <mesh castShadow receiveShadow>
          <boxGeometry args={[1, 1, 1]} />
          <meshStandardMaterial color="#9ca3af" />
        </mesh>
      ) : null}
      {children}
    </group>
  );
}

type SemanticComponentProps = Omit<SemanticNodeProps, 'semanticRole'>;

function DisplaySurface(props: SemanticComponentProps) {
  return <SemanticNode {...props} semanticRole="display" />;
}

function EnvironmentGroup(props: SemanticComponentProps) {
  return <SemanticNode {...props} semanticRole="environment" />;
}

function Product(props: SemanticComponentProps) {
  return <SemanticNode {...props} semanticRole="product" />;
}

function SceneLight(props: ThreeElements['group'] & { sourceId: string; lightKind: 'ambient' | 'directional'; lightIntensity?: number; lightCastShadow?: boolean; children?: ReactNode }) {
  const { sourceId, lightKind, lightIntensity, lightCastShadow, children, ...groupProps } = props;
  return (
    <group {...groupProps} userData={{ sourceId, semanticRole: 'light' }}>
      {lightKind === 'ambient' ? (
        <ambientLight intensity={lightIntensity} />
      ) : (
        <directionalLight intensity={lightIntensity} castShadow={lightCastShadow} />
      )}
      {children}
    </group>
  );
}

function SeatingElement(props: SemanticComponentProps) {
  return <SemanticNode {...props} semanticRole="seating" />;
}

export function InteractiveShowroom() {
  const [selectedId, setSelectedId] = useState<string | null>(null);

  const handleSelect = (id: string) => {
    setSelectedId(id);
  };

  const handleHoverStart = (id: string) => {
    // TODO: highlight object with this source id.
    void id;
  };

  const handleHoverEnd = (id: string) => {
    // TODO: clear highlight for this source id.
    void id;
  };

  const handleFocusCamera = (id: string) => {
    // TODO: move or retarget the app camera for this source id.
    void id;
  };

  return (
    <>
      {/* Studio fill - not from scene graph */}
      <ambientLight intensity={0.4} />
      <directionalLight castShadow position={[5, 8, 5]} intensity={1.1} />
      {/* Semantic group: display_area | role=display | nodes=product_01,product_02,product_03,display_table,display_plinth */}
      {/* Semantic group: environment | role=environment | nodes=floor,wall,backdrop_panel */}
      {/* Semantic group: lighting_zone | role=lighting | nodes=light_key,light_fill */}
      {/* Semantic group: seating_area | role=seating | nodes=bench,chair */}
      {/* showroom-root - Messy Product Showroom */}
      <group name="Messy Product Showroom" position={[0, 0, 0]} rotation={[0, 0, 0]} scale={[1, 1, 1]}>
        {/* floor - Floor | role=environment | group=environment */}
        <EnvironmentGroup
          sourceId="floor"
          name="Floor"
          position={[0, -0.05, 0]}
          rotation={[0, 0, 0]}
          scale={[8, 0.1, 6]}
          renderMesh
        />
        {/* wall - North Wall | role=environment | group=environment */}
        <EnvironmentGroup
          sourceId="wall"
          name="North Wall"
          position={[0, 1.6, -3]}
          rotation={[0, 0, 0]}
          scale={[8, 3.2, 0.12]}
          renderMesh
        />
        {/* product_01 - Product 01 | role=product | group=display_area | traits=clickable,hoverable,displayable,focusable | behavior=click_select,hover_highlight,show_info,focus_camera */}
        <Product
          sourceId="product_01"
          name="Product 01"
          position={[-1.8, 0.65, 0.4]}
          rotation={[0, 0.4, 0]}
          scale={[0.65, 0.9, 0.65]}
          renderMesh
          onHoverStart={() => handleHoverStart('product_01')}
          onHoverEnd={() => handleHoverEnd('product_01')}
          onSelect={() => {
            handleSelect('product_01');
            handleFocusCamera('product_01');
          }}
        />
        {selectedId === 'product_01' ? (
          <>{/* TODO: render info panel for Product information: Interactive showroom item generated from structured scene metadata.. */}</>
        ) : null}
        {/* bench - Bench | role=seating | group=seating_area | traits=seatable,focusable | behavior=focus_camera,anchor_point */}
        {/* TODO: anchor_point is scaffolded as a developer hook; no runtime behavior is generated. */}
        <SeatingElement
          sourceId="bench"
          name="Bench"
          position={[-2.6, 0.32, 1.9]}
          rotation={[0, 0.18, 0]}
          scale={[1.5, 0.45, 0.55]}
          renderMesh
          onSelect={() => handleFocusCamera('bench')}
        />
        {/* display_table - Display Table | role=display | group=display_area | traits=displayable | behavior=show_info */}
        <DisplaySurface
          sourceId="display_table"
          name="Display Table"
          position={[-0.4, 0.28, 0.15]}
          rotation={[0, -0.12, 0]}
          scale={[1.8, 0.35, 0.9]}
          renderMesh
        />
        {selectedId === 'display_table' ? (
          <>{/* TODO: render info panel for Display Table. */}</>
        ) : null}
        {/* product_03 - Product 03 | role=product | group=display_area | traits=clickable,hoverable,displayable,focusable | behavior=click_select,hover_highlight,show_info,focus_camera */}
        <Product
          sourceId="product_03"
          name="Product 03"
          position={[0.35, 0.8, 1.45]}
          rotation={[0, 0.85, 0]}
          scale={[0.55, 1.1, 0.55]}
          renderMesh
          onHoverStart={() => handleHoverStart('product_03')}
          onHoverEnd={() => handleHoverEnd('product_03')}
          onSelect={() => {
            handleSelect('product_03');
            handleFocusCamera('product_03');
          }}
        />
        {selectedId === 'product_03' ? (
          <>{/* TODO: render info panel for Product information: Interactive showroom item generated from structured scene metadata.. */}</>
        ) : null}
        {/* light_fill - Light Fill | role=lighting | group=lighting_zone */}
        <SceneLight
          sourceId="light_fill"
          name="Light Fill"
          position={[3.1, 2.4, 2.5]}
          rotation={[0, -0.4, 0]}
          scale={[0.25, 0.25, 0.25]}
          lightKind="ambient"
          lightIntensity={0.35}
        />
        {/* chair - Chair | role=seating | group=seating_area | traits=seatable,focusable | behavior=focus_camera,anchor_point */}
        {/* TODO: anchor_point is scaffolded as a developer hook; no runtime behavior is generated. */}
        <SeatingElement
          sourceId="chair"
          name="Chair"
          position={[2.7, 0.45, 1.65]}
          rotation={[0, -0.55, 0]}
          scale={[0.75, 0.9, 0.75]}
          renderMesh
          onSelect={() => handleFocusCamera('chair')}
        />
        {/* display_plinth - Display Plinth | role=display | group=display_area | traits=displayable | behavior=show_info */}
        <DisplaySurface
          sourceId="display_plinth"
          name="Display Plinth"
          position={[1.3, 0.32, 1.15]}
          rotation={[0, 0.1, 0]}
          scale={[0.9, 0.65, 0.9]}
          renderMesh
        />
        {selectedId === 'display_plinth' ? (
          <>{/* TODO: render info panel for Display Plinth. */}</>
        ) : null}
        {/* product_02 - Product 02 | role=product | group=display_area | traits=clickable,hoverable,displayable,focusable | behavior=click_select,hover_highlight,show_info,focus_camera */}
        <Product
          sourceId="product_02"
          name="Product 02"
          position={[2.1, 0.55, -0.2]}
          rotation={[0, -0.25, 0]}
          scale={[0.8, 0.7, 0.8]}
          renderMesh
          onHoverStart={() => handleHoverStart('product_02')}
          onHoverEnd={() => handleHoverEnd('product_02')}
          onSelect={() => {
            handleSelect('product_02');
            handleFocusCamera('product_02');
          }}
        />
        {selectedId === 'product_02' ? (
          <>{/* TODO: render info panel for Product information: Interactive showroom item generated from structured scene metadata.. */}</>
        ) : null}
        {/* light_key - Light Key | role=lighting | group=lighting_zone */}
        <SceneLight
          sourceId="light_key"
          name="Light Key"
          position={[-3.2, 3.4, 2.2]}
          rotation={[0, 0.5, 0]}
          scale={[0.25, 0.25, 0.25]}
          lightKind="directional"
          lightIntensity={1.2}
          lightCastShadow
        />
        {/* backdrop_panel - Backdrop Panel | role=environment | group=environment */}
        <EnvironmentGroup
          sourceId="backdrop_panel"
          name="Backdrop Panel"
          position={[-2.4, 1.05, -2.65]}
          rotation={[0, 0.18, 0]}
          scale={[1.6, 2.1, 0.1]}
          renderMesh
        />
      </group>
    </>
  );
}
"
`;

exports[`Milestone 7 export eval > hidden, light, and root transform behavior > emits ambient and directional primitives for agent-added light nodes > agent light nodes 1`] = `
"/* eslint-disable */
/* Auto-generated for React Three Fiber - paste inside <Canvas> */
<>
    {/* default-root - Root */}
    <group name="Root" position={[0, 0, 0]} rotation={[0, 0, 0]} scale={[1, 1, 1]}>
      {/* default-cube-1 - Cube 1 */}
      <group name="Cube 1" position={[0, 0.5, 0]} rotation={[0, 0, 0]} scale={[1, 1, 1]}>
        <mesh castShadow receiveShadow>
          <boxGeometry args={[1, 1, 1]} />
          <meshStandardMaterial color="#9ca3af" />
        </mesh>
      </group>
      {/* agent-ambient - Agent Ambient */}
      <group name="Agent Ambient" position={[0, 0, 0]} rotation={[0, 0, 0]} scale={[1, 1, 1]}>
        <ambientLight intensity={0.42} />
      </group>
      {/* agent-directional - Agent Sun */}
      <group name="Agent Sun" position={[4, 8, 5]} rotation={[0, 0, 0]} scale={[1, 1, 1]}>
        <directionalLight intensity={1.2} castShadow />
      </group>
    </group>
</>
"
`;

exports[`Milestone 7 export eval > hidden, light, and root transform behavior > omits agent-added hidden subtrees and their descendants from the R3F output > agent hidden subtree 1`] = `
"/* eslint-disable */
/* Auto-generated for React Three Fiber - paste inside <Canvas> */
<>
    {/* default-root - Root */}
    <group name="Root" position={[0, 0, 0]} rotation={[0, 0, 0]} scale={[1, 1, 1]}>
      {/* default-cube-1 - Cube 1 */}
      <group name="Cube 1" position={[0, 0.5, 0]} rotation={[0, 0, 0]} scale={[1, 1, 1]}>
        <mesh castShadow receiveShadow>
          <boxGeometry args={[1, 1, 1]} />
          <meshStandardMaterial color="#9ca3af" />
        </mesh>
      </group>
    </group>
</>
"
`;

exports[`Milestone 7 export eval > hidden, light, and root transform behavior > reflects an agent-driven UPDATE_TRANSFORM on the root in the root R3F group > agent root transform 1`] = `
"/* eslint-disable */
/* Auto-generated for React Three Fiber - paste inside <Canvas> */
<>
    {/* default-root - Root */}
    <group name="Root" position={[10, 0, 0]} rotation={[0, 0.5, 0]} scale={[1.5, 1.5, 1.5]}>
      {/* default-cube-1 - Cube 1 */}
      <group name="Cube 1" position={[0, 0.5, 0]} rotation={[0, 0, 0]} scale={[1, 1, 1]}>
        <mesh castShadow receiveShadow>
          <boxGeometry args={[1, 1, 1]} />
          <meshStandardMaterial color="#9ca3af" />
        </mesh>
      </group>
    </group>
</>
"
`;
